Correction z-index loader

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -334,9 +334,11 @@
 @keyframes loaderHidden {
   0% {
     opacity: 1;
+    z-index: 99;
   }
   100% {
     opacity: 0;
+    z-index: -1;
   }
 }
 .restaurantSection {
@@ -505,7 +507,6 @@
   right: 0;
   width: 100%;
   background: white;
-  z-index: 99;
   display: flex;
   flex-wrap: wrap;
   min-height: 100%;
@@ -513,6 +514,7 @@
   align-items: center;
   font-size: 3rem;
   font-family: Shrikhand, sans-serif;
+  z-index: 99;
   animation: loaderHidden 1200ms forwards;
   animation-delay: 1500ms;
 }
